# xauusd-ichimoku-rl-bot

./: .gitignore  LICENSE  README.md  check_optimizer.py  check_progress.py  compare_json.py  compare_models.py  gen_mql5_now.py  generate_mql5.py  inventory.py  main.py  pyproject.toml  reality_check.py  requirements.txt  run_backtest.py  run_optimizer_500.py  run_rl_v2.py
mql5_output/: IchiMTF_RL_Strategy.mq5  IchiRule_Top1.mq5  IchiRule_Top2.mq5  IchiRule_Top3.mq5  README.md
sample_data/: README.md  XAUUSD_2026_01_sample.csv
src/data/: data_loader.py  feature_engine.py  ichimoku_features.py  macro_data.py  multi_tf_engine.py  resampler.py
src/env/: trading_env.py
src/models/: evaluate.py  mt5_report.py  train_ppo.py
src/rbi/: progressive_validation.py  rbi_loop.py
src/strategy/: ichimoku_strategy.py
src/xauusd_ichi/: __init__.py  _generator.py  _runner.py  cli.py
